// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-launchdarkly destination: aliasUser action - all fields 1`] = `
Array [
  Object {
    "context": Object {
      "ejK#0yc)je6nnS#S": Object {
        "key": "ejK#0yc)je6nnS#S",
      },
      "kind": "multi",
    },
    "creationDate": 1612137600000,
    "kind": "identify",
  },
]
`;

exports[`Testing snapshot for actions-launchdarkly destination: aliasUser action - required fields 1`] = `
Array [
  Object {
    "context": Object {
      "ejK#0yc)je6nnS#S": Object {
        "key": "ejK#0yc)je6nnS#S",
      },
      "kind": "multi",
    },
    "creationDate": Any<Number>,
    "kind": "identify",
  },
]
`;

exports[`Testing snapshot for actions-launchdarkly destination: trackEvent action - all fields 1`] = `
Array [
  Object {
    "contextKeys": Object {
      "8&tx*8iz0@V]qDguvfK": "8&tx*8iz0@V]qDguvfK",
      "testType": "8&tx*8iz0@V]qDguvfK",
    },
    "creationDate": 1612137600000,
    "data": Object {
      "testType": "8&tx*8iz0@V]qDguvfK",
    },
    "key": "8&tx*8iz0@V]qDguvfK",
    "kind": "custom",
    "metricValue": 70594582198353.92,
  },
]
`;

exports[`Testing snapshot for actions-launchdarkly destination: trackEvent action - required fields 1`] = `
Array [
  Object {
    "contextKeys": Object {
      "8&tx*8iz0@V]qDguvfK": "8&tx*8iz0@V]qDguvfK",
    },
    "creationDate": Any<Number>,
    "data": Object {},
    "key": "8&tx*8iz0@V]qDguvfK",
    "kind": "custom",
  },
]
`;
